--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -23,9 +23,10 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link" href="{{ path('app_immobilier_index') }}"><i class="fas fa-building"></i> Immobilier</a></li>
-                    <li class="nav-item"><a class="nav-link" href="{{ path('app_avis_index') }}">Avis</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{{ path('app_avis_index') }}"><i class="fas fa-comments"></i>Avis</a></li>
                     <li class="nav-item"><a class="nav-link" href="{{ path('app_reservation_index') }}"><i class="fas fa-calendar-alt"></i> Réservations</a></li>
-                    <a class="nav-link" href="{{ path('app_immobilier_search') }}">Rechercher un bien</a>
+
+                    <li class="nav-item"> <a class="nav-link" href="{{ path('app_immobilier_search') }}"><i class="fas fa-search"></i> Rechercher un bien</a></li>
 
                     {% if is_granted('ROLE_ADMIN') %}
                         <li class="nav-item">
